【说明】更新ReadMe 说明

--- a/README
+++ b/README
@@ -34,8 +34,8 @@ GMSMapDemo
 │   │   └── GMSMapContentViewModel.swift
 │   │   └── GMSMapViewModel.swift
 │   ├── Service
-│   │   └── GMSMapContentViewModel.swift
-│   │   └── GMSMapViewModel.swift
+│   │   └── GMSMapHelper.swift
+│   │   └── GMSMapLocationManager.swift
 │   └── Model
 │       └── GMSMapModel.swift
 ├── Resources
